// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirects when logged in 1`] = `
<Redirect
  push={false}
  to="/dashboard"
/>
`;

exports[`renders correctly 1`] = `
<div>
  <div>
    <a
      href="https://www.sparkpost.com"
      title="SparkPost"
    >
      <Logo />
    </a>
  </div>
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
</div>
`;

exports[`renders correctly when there is a login error 1`] = `
<div>
  <div>
    <a
      href="https://www.sparkpost.com"
      title="SparkPost"
    >
      <Logo />
    </a>
  </div>
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <div
      className="error"
    >
      <p>
        uh oh!
      </p>
    </div>
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
</div>
`;
